<resources>
    <string name="app_name">Sem08</string>
    <string name="et_correo">Correo</string>
    <string name="et_clave">Contraseña</string>
    <string name="nologin">Usuario/Contraseña no valida</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nombreLugar">Nombre del Lugar</string>
    <string name="correoLugar">Email</string>
    <string name="telefonoLugar">Teléfono (8888-8888)</string>
    <string name="webLugar">Web</string>
    <string name="btAddLugar">Agregar Lugar</string>

    <string name="ms_AddLugar">Lugar Agregado con Éxito</string>
    <string name="ms_UpdateLugar">Lugar Modificado con Éxito</string>
    <string name="ms_DeleteLugar">Lugar Eliminado con Éxito</string>
    <string name="ms_FaltaValores">Faltan Valores</string>

    <string name="bt_update_lugar">Actualizar Lugar</string>
    <string name="bt_delete_lugar">Eliminar Lugar</string>

    <string name="todo">To do</string>
    <string name="msg_imagen">Foto del Lugar</string>
    <string name="msgEscucharAudio">Escuchando audio</string>

    <string name="msgInicioNotaAudio">Grabando</string>
    <string name="msgDetieneNotaAudio">Detiene</string>
    <string name="msgSubiendo">Subiendo los archivos</string>
</resources>